<resources>
    <string name="app_name">WonderWoman</string>
    <!--  딜리버리  -->
    <string name="realtime_delivery">실시간 딜리버리</string>
    <string name="liner">라이너</string>
    <string name="small">소형</string>
    <string name="regular">중형</string>
    <string name="large">대형</string>
    <string name="overnight">오버나이트</string>
    <string name="chatting">채팅중</string>
    <string name="progressing">진행중</string>
    <string name="complete">완료</string>
    <string name="request_state">요청</string>
    <string name="dispatch_state">출동</string>
    <string name="goout">출동하기 -></string>
    <string name="request">요청하기 -></string>

    <!--  게시글 작성  -->
    <string name="write">글쓰기</string>
    <string name="title">제목</string>
    <string name="category">유형 선택</string>
    <string name="location">게시물 표시 위치</string>
    <string name="count">개수</string>
    <string name="size">크기</string>
    <string name="type">종류</string>
    <string name="significant">특이사항</string>
    <string name="wing">날개형</string>
    <string name="absorption">흡수형</string>
    <string name="cotton">순면</string>
    <string name="organic">유기농</string>


    <!--  마이페이지  -->
    <string name="mypage">마이페이지</string>
    <string name="mydelivery">내 딜리버리</string>
    <string name="myrequest">내 요청</string>
    <string name="mydispatch">내 출동</string>
    <string name="scrap">스크랩</string>
    <string name="mypost">내가 쓴 글</string>
    <string name="guide">이용안내</string>
    <string name="terms">이용약관                </string>
    <string name="privacypolicy">개인정보 처리방침</string>
    <string name="faq">FAQ</string>

    <!--내 정보 변경-->
    <string name="editprofile">프로필 설정</string>
    <string name="email">이메일</string>
    <string name="nickname">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="hintpw">비밀번호를 입력해주세요.</string>
    <string name="hintagainpw">비밀번호를 한번 더 입력해주세요.</string>
    <string name="wrongpw">영문, 숫자를 포함한 8~16자리 조합으로 입력해주세요.</string>
    <string name="save">저장</string>

</resources>