<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mypage_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/gradient_header"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <LinearLayout
            android:id="@+id/main_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wonder_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/sb_aggro_otf"
                android:text="Wonder Woman"
                android:textAppearance="@style/wonder_woman"
                android:textSize="19sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/mypage"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:background="@drawable/gradient_body_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/profileImg"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:scaleType="centerCrop"
                        android:clipToOutline="true"
                        android:src="@drawable/profile"
                        android:background="@drawable/profile_bg"/>

                    <LinearLayout
                        android:layout_width="75dp"
                        android:layout_height="80dp"
                        android:layout_gravity="end"
                        android:gravity="right">

                        <ImageButton
                            android:id="@+id/edit_info"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom"
                            android:background="@drawable/change_profile_btn" />
                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="닉네임"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/bold20"
                    android:textColorHint="@color/gray3" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="0000@ewhain.net"
                    android:textAllCaps="false"
                    android:textAppearance="@style/regular13"
                    android:textColorHint="@color/gray2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/mypagebox"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/myrequest"
                android:textAppearance="@style/bold13" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/mydispatch"
                android:textAppearance="@style/bold13" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/scrap"
                android:textAppearance="@style/bold13" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/mypost"
                android:textAppearance="@style/bold13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/mypagelistbox"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/mydelivery"
                    android:textAppearance="@style/bold16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/myrequest"
                            android:textAppearance="@style/regular15" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/mydispatch"
                            android:textAppearance="@style/regular15" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/more" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/more" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/guide"
                    android:textAppearance="@style/bold16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/terms"
                            android:textAppearance="@style/regular15" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/privacypolicy"
                            android:textAppearance="@style/regular15" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/faq"
                            android:textAppearance="@style/regular15" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/more" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/more" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:background="@drawable/more" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>